[project]
name = "project-github"
version = "0.1.0"
description = "Bitcoin Price Forecasting Portal - Milestone A (Data Ingestion)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"kagglehub>=0.3.10",
	"numpy>=2.1.0",
	"pandas>=2.2.2",
	"plotly>=5.24.0",
	"prophet>=1.1.6",
	"scikit-learn>=1.6.1",
	"statsmodels>=0.14.4",
	"streamlit>=1.45.0",
	"torch>=2.11.0",
]
